Merge via patch from REL_2.1.153_OS_5 to  REL_2_1_190