@@ -9,7 +9,7 @@ import org.gradle.api.Project
 ext.build_script_dir = "${projectDir.path}/build_script"
 
 ext.isDefaultEnvironment = !project.hasProperty('overrideBuildEnvironment')
- 
+
 File getEnvironmentScript()
 {
   final File env = file(isDefaultEnvironment ? 'defaultEnvironment.gradle' : project.overrideBuildEnvironment)
@@ -23,7 +23,7 @@ externalDependency = [
     'avro': 'org.apache.avro:avro:1.4.0',
     'commonsBeanutils': 'commons-beanutils:commons-beanutils:1.7.0',
     'commonsCli': 'commons-cli:commons-cli:1.2',
-    'commonsCodec': 'commons-codec:commons-codec:1.3',
+    'commonsCodec': 'commons-codec:commons-codec:1.6',
     'commonsCollections': 'commons-collections:commons-collections:3.2.1',
     'commonsIo': 'commons-io:commons-io:1.4',
     'commonsLang': 'commons-lang:commons-lang:2.5',
@@ -51,14 +51,19 @@ externalDependency = [
     'zkclientHelix': 'com.github.sgroschupf:zkclient:0.1',
     'zookeeper': 'org.apache.zookeeper:zookeeper:3.3.3',
     'ojdbc6': 'com.oracle:ojdbc6:11.2.0.2.0',
-    'espressoSchema': 'com.linkedin.espresso:espresso-schema-impl:0.5.264',
-    'espressoCommonImpl': 'com.linkedin.espresso:espresso-common-impl:0.5.264',
-    'espressoStoreImpl': 'com.linkedin.espresso:espresso-store-impl:0.5.264',
-    'helixCore': 'com.linkedin.helix:helix-core:0.5.31'
+    'databusEvents': 'com.linkedin.databus-events:databus-events:3.0.70',
+    'databusSchemas': 'com.linkedin.databus-events:databus-schemas:3.0.70',
+    'espressoSchema': 'com.linkedin.espresso:espresso-schema-impl:0.8.1602',
+    'espressoCommonImpl': 'com.linkedin.espresso:espresso-common-impl:0.8.1602',
+    'espressoStoreImpl': 'com.linkedin.espresso:espresso-store-impl:0.8.1602',
+    'helixCore': 'org.apache.helix:helix-core:0.6.1.3'
 ];
 
 if (System.getProperty('open_source') != null) {
   externalDependency['mysqlConnectorJava'] = 'mysql:mysql-connector-java:5.1.14'
+  externalDependency['helixCore'] = 'org.apache.helix:helix-core:0.6.1-incubating'
+  externalDependency.remove('databusEvents')
+  externalDependency.remove('databusSchemas')
   externalDependency.remove('espressoSchema')
   externalDependency.remove('espressoCommonImpl')
   externalDependency.remove('espressoStoreImpl')
@@ -86,6 +91,13 @@ allprojects {
   /* workaround for GRADLE-2243 (http://issues.gradle.org/browse/GRADLE-2243) */
   tasks.withType(FindBugs) {
 	ignoreFailures=true
+	effort="max"
+	reportLevel="low"
+	def f = new File("${project.projectDir}", "FindBugs-excludes.xml")
+	if ( f.exists()) {
+		println("Using FindBugs excludes:" + f.getAbsolutePath())
+		excludeFilter= file("${project.projectDir}/FindBugs-excludes.xml")
+	}
   }
 }
 
@@ -101,18 +113,18 @@ class GitLIGenerateClasspath extends DefaultTask {
   File classpathFile = project.file("${project.buildDir}/${project.name}.classpath")
 
   @Input String configurationName = "default"
-          
+
   public GitLIGenerateClasspath() {
       this.outputs.upToDateWhen { false }
-  }      
-        
-  @TaskAction 
-  def generateClasspath() { 
+  }
+
+  @TaskAction
+  def generateClasspath() {
     def configuration = project.configurations.getByName(configurationName)
     def runtimePath = configuration.resolve().join(":")
-    
+
     classpathFile.write(runtimePath + ":" + configuration.allArtifacts.files.getAsPath())
-  } 
+  }
 }
 /* Uncomment for Cobertura integration */
 /*
@@ -122,23 +134,20 @@ buildscript {
 }
 */
 
-subprojects { 
+subprojects {
 
   plugins.withType(JavaPlugin) {
+
+   // Please see TOOLS-17168, regarding how runtime dependencies can
+   // get interpreted as compile time dependency
+   // configurations.compile.exclude module: 'ojdbc6'
+
     plugins.apply('eclipse')
     plugins.apply('idea')
 
-    if (System.getProperty('open_source') != null) {
-    plugins.apply('findbugs')
-    findbugs {
-	toolVersion = "1.3.9"
-	sourceSets = [sourceSets.main]
-	reportsDir = file("$project.buildDir/findbugsReports")
-	effort="max"
-	reportLevel="low"
-	ignoreFailures=true
-    	}
-    }
+	if (System.getProperty('open_source') != null) {
+	    plugins.apply('findbugs')
+	}
 
     sourceCompatibility = JavaVersion.VERSION_1_6
     configurations {
@@ -156,11 +165,20 @@ subprojects {
     // Default dependencies for all subprojects
     dependencies {
         runtime externalDependency.log4j
+        // Force easymock to version 3.1. One of the espresso dependencies changes it to 2.4
+        // and v2.4 does not support mocking of classes, causing our espresso unit tests
+        // to break.
+        runtime(externalDependency.easymock) {
+            force = true
+        }
+        compile(externalDependency.easymock) {
+            force = true
+        }
     }
 
     if (System.getProperty('open_source') == null) {
       def gitLIGenerateClasspath = project.tasks.add(name: GitLIGenerateClasspath.TASK_NAME, type: GitLIGenerateClasspath.class)
-      jar.dependsOn gitLIGenerateClasspath 
+      jar.dependsOn gitLIGenerateClasspath
     }
 
     if (isDefaultEnvironment) {
@@ -168,7 +186,7 @@ subprojects {
         from sourceSets.main.allSource
         classifier = 'sources'
       }
-  
+
       task javadocJar(type: Jar, dependsOn: javadoc) {
         from javadoc.destinationDir
         classifier = 'javadoc'
@@ -189,17 +207,17 @@ subprojects {
     }
 
     test {
-      	maxHeapSize = '6g'
-        jvmArgs '-XX:MaxDirectMemorySize=6096m', '-XX:PermSize=512M', '-XX:MaxPermSize=1024M',  '-ea'
-        useTestNG() 
-        
+      	maxHeapSize = '6200m'
+        jvmArgs '-XX:MaxDirectMemorySize=8192m', '-XX:PermSize=512M', '-XX:MaxPermSize=1024M',  '-ea', '-verbose:gc', '-Xloggc:/tmp/test-gc.log', '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-XX:+UseConcMarkSweepGC', '-XX:+UseParNewGC', '-XX:CMSInitiatingOccupancyFraction=75', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:NewSize=256m', '-XX:MaxNewSize=256m'
+        useTestNG()
+
         /* Uncomment for Cobertura integration */
         /*
         project.task("cleanTest", type: Delete) {
             description = "Cleans the results of the 'test' task and makes it out-of-date"
             delete outputs.files
         }
-        */  
+        */
         doFirst { desc->
           logger.lifecycle("Running task: " + desc);
         }
